// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SyncPointTests modified-tempo-lookup 1`] = `
Map {
  Automation {
    "isLinear": false,
    "ratioPosition": 0,
    "syncPointValue": SyncPointData {
      "barOccurence": 0,
      "millisecondOffset": 0,
    },
    "text": "",
    "type": 4,
    "value": 0,
  } => BackingTrackSyncPoint {
    "masterBarIndex": 0,
    "masterBarOccurence": 0,
    "syncBpm": 120,
    "syncTime": 0,
    "synthBpm": 120,
    "synthTick": 0,
    "synthTime": 0,
  },
  Automation {
    "isLinear": false,
    "ratioPosition": 0,
    "syncPointValue": SyncPointData {
      "barOccurence": 0,
      "millisecondOffset": 4000,
    },
    "text": "",
    "type": 4,
    "value": 0,
  } => BackingTrackSyncPoint {
    "masterBarIndex": 2,
    "masterBarOccurence": 0,
    "syncBpm": 240,
    "syncTime": 4000,
    "synthBpm": 120,
    "synthTick": 7680,
    "synthTime": 4000,
  },
  Automation {
    "isLinear": false,
    "ratioPosition": 0,
    "syncPointValue": SyncPointData {
      "barOccurence": 0,
      "millisecondOffset": 5000,
    },
    "text": "",
    "type": 4,
    "value": 0,
  } => BackingTrackSyncPoint {
    "masterBarIndex": 3,
    "masterBarOccurence": 0,
    "syncBpm": 240,
    "syncTime": 5000,
    "synthBpm": 120,
    "synthTick": 11520,
    "synthTime": 6000,
  },
  Automation {
    "isLinear": false,
    "ratioPosition": 0,
    "syncPointValue": SyncPointData {
      "barOccurence": 0,
      "millisecondOffset": 6000,
    },
    "text": "",
    "type": 4,
    "value": 0,
  } => BackingTrackSyncPoint {
    "masterBarIndex": 4,
    "masterBarOccurence": 0,
    "syncBpm": 59.96124953261497,
    "syncTime": 6000,
    "synthBpm": 60,
    "synthTick": 15360,
    "synthTime": 8000,
  },
  Automation {
    "isLinear": false,
    "ratioPosition": 0,
    "syncPointValue": SyncPointData {
      "barOccurence": 0,
      "millisecondOffset": 10002.585034013606,
    },
    "text": "",
    "type": 4,
    "value": 0,
  } => BackingTrackSyncPoint {
    "masterBarIndex": 5,
    "masterBarOccurence": 0,
    "syncBpm": 59.961249532614985,
    "syncTime": 10002.585034013606,
    "synthBpm": 60,
    "synthTick": 19200,
    "synthTime": 12000,
  },
  Automation {
    "isLinear": false,
    "ratioPosition": 0,
    "syncPointValue": SyncPointData {
      "barOccurence": 0,
      "millisecondOffset": 22010.34013605442,
    },
    "text": "",
    "type": 4,
    "value": 0,
  } => BackingTrackSyncPoint {
    "masterBarIndex": 8,
    "masterBarOccurence": 0,
    "syncBpm": 120.04899959166994,
    "syncTime": 22010.34013605442,
    "synthBpm": 80,
    "synthTick": 30720,
    "synthTime": 24000,
  },
  Automation {
    "isLinear": false,
    "ratioPosition": 0,
    "syncPointValue": SyncPointData {
      "barOccurence": 0,
      "millisecondOffset": 24009.52380952381,
    },
    "text": "",
    "type": 4,
    "value": 0,
  } => BackingTrackSyncPoint {
    "masterBarIndex": 9,
    "masterBarOccurence": 0,
    "syncBpm": 120.04899959167003,
    "syncTime": 24009.52380952381,
    "synthBpm": 80,
    "synthTick": 34560,
    "synthTime": 27000,
  },
  Automation {
    "isLinear": false,
    "ratioPosition": 0,
    "syncPointValue": SyncPointData {
      "barOccurence": 1,
      "millisecondOffset": 30007.074829931975,
    },
    "text": "",
    "type": 4,
    "value": 0,
  } => BackingTrackSyncPoint {
    "masterBarIndex": 8,
    "masterBarOccurence": 1,
    "syncBpm": 80.01088583480758,
    "syncTime": 30007.074829931975,
    "synthBpm": 80,
    "synthTick": 46080,
    "synthTime": 36000,
  },
  Automation {
    "isLinear": false,
    "ratioPosition": 0,
    "syncPointValue": SyncPointData {
      "barOccurence": 1,
      "millisecondOffset": 33006.666666666664,
    },
    "text": "",
    "type": 4,
    "value": 0,
  } => BackingTrackSyncPoint {
    "masterBarIndex": 9,
    "masterBarOccurence": 1,
    "syncBpm": 80.01778172927317,
    "syncTime": 33006.666666666664,
    "synthBpm": 80,
    "synthTick": 49920,
    "synthTime": 39000,
  },
}
`;

exports[`SyncPointTests playback-fast-backing-track 1`] = `
Array [
  "0,120,240",
  "500,120,240",
  "1000,120,240",
  "1500,120,240",
  "2000,120,480",
  "3000,120,480",
  "4000,120,119.92249906522994",
  "4499.677079438458,60,119.92249906522994",
  "4999.354158876916,60,119.92249906522994",
  "5499.031238315374,60,119.92249906522994",
  "5998.7083177538325,60,119.92249906522994",
  "6498.385397192291,60,119.92249906522997",
  "6998.062476630749,60,119.92249906522997",
  "7497.7395560692075,60,119.92249906522997",
  "7997.416635507665,60,119.92249906522997",
  "8497.093714946124,60,119.92249906522997",
  "8996.770794384582,60,119.92249906522997",
  "9496.447873823041,60,119.92249906522997",
  "9996.124953261498,60,119.92249906522997",
  "10495.802032699958,60,119.92249906522997",
  "10995.479112138415,60,119.92249906522997",
  "11495.156191576873,60,119.92249906522997",
  "11994.833271015332,60,119.92249906522997",
  "12742.547978766845,80,240.09799918333988",
  "13492.854226214782,80,240.09799918333988",
  "14243.16047366272,80,240.09799918334005",
  "14993.466721110657,80,240.09799918334005",
  "15743.772968558595,80,240.09799918334005",
  "16494.079216006532,80,240.09799918334005",
  "17244.38546345447,80,240.09799918334005",
  "17994.691710902407,80,240.09799918334005",
  "18496.530140155122,80,160.02177166961516",
  "18996.59817662267,80,160.02177166961516",
  "19496.66621309022,80,160.02177166961516",
  "19996.77706156924,80,160.03556345854633",
  "20496.888197377197,80,160.03556345854633",
  "20996.999333185155,80,160.03556345854633",
  "21497.11046899311,80,160.03556345854633",
  "21997.221604801067,80,160.03556345854633",
  "22497.332740609025,80,160.03556345854633",
  "22997.443876416983,80,160.03556345854633",
  "23497.55501222494,80,160.03556345854633",
  "23997.6661480329,80,160.03556345854633",
]
`;

exports[`SyncPointTests playback-normal-backing-track 1`] = `
Array [
  "0,120,120",
  "500,120,120",
  "1000,120,120",
  "1500,120,120",
  "2000,120,120",
  "2500,120,120",
  "3000,120,120",
  "3500,120,120",
  "4000,120,240",
  "5000,120,240",
  "6000,120,240",
  "7000,120,240",
  "8000,120,59.96124953261497",
  "8499.677079438457,60,59.96124953261497",
  "8999.354158876917,60,59.96124953261497",
  "9499.031238315374,60,59.96124953261497",
  "9998.708317753832,60,59.96124953261497",
  "10498.38539719229,60,59.96124953261497",
  "10998.062476630748,60,59.96124953261497",
  "11497.739556069206,60,59.96124953261497",
  "11997.416635507665,60,59.96124953261497",
  "12497.093714946122,60,59.961249532614985",
  "12996.770794384582,60,59.961249532614985",
  "13496.44787382304,60,59.961249532614985",
  "13996.124953261498,60,59.961249532614985",
  "14495.802032699956,60,59.961249532614985",
  "14995.479112138415,60,59.961249532614985",
  "15495.156191576873,60,59.961249532614985",
  "15994.83327101533,60,59.961249532614985",
  "16494.51035045379,60,59.961249532614985",
  "16994.18742989225,60,59.961249532614985",
  "17493.864509330706,60,59.961249532614985",
  "17993.541588769163,60,59.961249532614985",
  "18493.21866820762,60,59.961249532614985",
  "18992.895747646082,60,59.961249532614985",
  "19492.57282708454,60,59.961249532614985",
  "19992.249906522997,60,59.961249532614985",
  "20491.926985961458,60,59.961249532614985",
  "20991.604065399915,60,59.961249532614985",
  "21491.281144838373,60,59.961249532614985",
  "21990.95822427683,60,59.961249532614985",
  "22490.635303715288,60,59.961249532614985",
  "22990.312383153745,60,59.961249532614985",
  "23489.989462592202,60,59.961249532614985",
  "23989.666542030664,60,59.961249532614985",
  "24734.78971008575,80,120.04899959166994",
  "25485.09595753369,80,120.04899959166994",
  "26235.402204981627,80,120.04899959166994",
  "26985.708452429564,80,120.04899959166994",
  "27736.0146998775,80,120.04899959167003",
  "28486.32094732544,80,120.04899959167003",
  "29236.627194773377,80,120.04899959167003",
  "29986.933442221314,80,120.04899959167003",
  "30737.23968966925,80,120.04899959167003",
  "31487.54593711719,80,120.04899959167003",
  "32237.852184565127,80,120.04899959167003",
  "32988.158432013064,80,120.04899959167003",
  "33738.464679461,80,120.04899959167003",
  "34488.77092690894,80,120.04899959167003",
  "35239.07717435688,80,120.04899959167003",
  "35989.383421804814,80,120.04899959167003",
  "36492.9922438427,80,80.01088583480758",
  "36993.060280310245,80,80.01088583480758",
  "37493.128316777795,80,80.01088583480758",
  "37993.19635324534,80,80.01088583480758",
  "38493.26438971289,80,80.01088583480758",
  "38993.33242618044,80,80.01088583480758",
  "39493.44298733052,80,80.01778172927317",
  "39993.55412313848,80,80.01778172927317",
  "40493.665258946436,80,80.01778172927317",
  "40993.77639475439,80,80.01778172927317",
  "41493.88753056235,80,80.01778172927317",
  "41993.99866637031,80,80.01778172927317",
  "42494.10980217827,80,80.01778172927317",
  "42994.22093798622,80,80.01778172927317",
  "43494.332073794176,80,80.01778172927317",
  "43994.443209602134,80,80.01778172927317",
  "44494.55434541009,80,80.01778172927317",
  "44994.66548121805,80,80.01778172927317",
  "45494.77661702601,80,80.01778172927317",
  "45994.887752833965,80,80.01778172927317",
  "46494.99888864192,80,80.01778172927317",
  "46995.11002444988,80,80.01778172927317",
  "47495.22116025784,80,80.01778172927317",
  "47995.3322960658,80,80.01778172927317",
]
`;

exports[`SyncPointTests seek-fast-backing-track 1`] = `
Array [
  "4000,120,240",
  "10000,60,240",
  "24000,80,240",
  "24000,80,240",
  "4999.354158876916,60,119.92249906522994",
  "8996.770794384582,60,119.92249906522997",
  "18996.59817662267,80,160.02177166961516",
]
`;

exports[`SyncPointTests seek-fast-backing-track 2`] = `
Array [
  0,
  0,
  0.5208333333333334,
  0.5208333333333334,
  6000,
  18007.755102040814,
  -Infinity,
  -Infinity,
]
`;

exports[`SyncPointTests seek-normal-backing-track 1`] = `
Array [
  "2000,120,120",
  "5000,120,120",
  "13000,60,120",
  "21000,60,120",
  "9998.708317753832,60,59.96124953261497",
  "17993.541588769163,60,59.961249532614985",
  "37993.19635324534,80,80.01088583480758",
]
`;

exports[`SyncPointTests seek-normal-backing-track 2`] = `
Array [
  0,
  0,
  0.5208333333333334,
  2000,
  4500,
  11003.231292517006,
  19008.401360544216,
]
`;

exports[`SyncPointTests sync-point-generation 1`] = `
Array [
  BackingTrackSyncPoint {
    "masterBarIndex": 0,
    "masterBarOccurence": 0,
    "syncBpm": 120,
    "syncTime": 0,
    "synthBpm": 120,
    "synthTick": 0,
    "synthTime": 0,
  },
  BackingTrackSyncPoint {
    "masterBarIndex": 2,
    "masterBarOccurence": 0,
    "syncBpm": 240,
    "syncTime": 4000,
    "synthBpm": 120,
    "synthTick": 7680,
    "synthTime": 4000,
  },
  BackingTrackSyncPoint {
    "masterBarIndex": 3,
    "masterBarOccurence": 0,
    "syncBpm": 240,
    "syncTime": 5000,
    "synthBpm": 120,
    "synthTick": 11520,
    "synthTime": 6000,
  },
  BackingTrackSyncPoint {
    "masterBarIndex": 4,
    "masterBarOccurence": 0,
    "syncBpm": 59.96124953261497,
    "syncTime": 6000,
    "synthBpm": 60,
    "synthTick": 15360,
    "synthTime": 8000,
  },
  BackingTrackSyncPoint {
    "masterBarIndex": 5,
    "masterBarOccurence": 0,
    "syncBpm": 59.961249532614985,
    "syncTime": 10002.585034013606,
    "synthBpm": 60,
    "synthTick": 19200,
    "synthTime": 12000,
  },
  BackingTrackSyncPoint {
    "masterBarIndex": 8,
    "masterBarOccurence": 0,
    "syncBpm": 120.04899959166994,
    "syncTime": 22010.34013605442,
    "synthBpm": 80,
    "synthTick": 30720,
    "synthTime": 24000,
  },
  BackingTrackSyncPoint {
    "masterBarIndex": 9,
    "masterBarOccurence": 0,
    "syncBpm": 120.04899959167003,
    "syncTime": 24009.52380952381,
    "synthBpm": 80,
    "synthTick": 34560,
    "synthTime": 27000,
  },
  BackingTrackSyncPoint {
    "masterBarIndex": 8,
    "masterBarOccurence": 1,
    "syncBpm": 80.01088583480758,
    "syncTime": 30007.074829931975,
    "synthBpm": 80,
    "synthTick": 46080,
    "synthTime": 36000,
  },
  BackingTrackSyncPoint {
    "masterBarIndex": 9,
    "masterBarOccurence": 1,
    "syncBpm": 80.01778172927317,
    "syncTime": 33006.666666666664,
    "synthBpm": 80,
    "synthTick": 49920,
    "synthTime": 39000,
  },
  BackingTrackSyncPoint {
    "masterBarIndex": 11,
    "masterBarOccurence": 0,
    "syncBpm": 80.01088583480758,
    "syncTime": 42004.666666666664,
    "synthBpm": 80,
    "synthTick": 61440,
    "synthTime": 48000,
  },
]
`;
